# Shut-Up-

./: .gitignore  CHANGELOG.md  README.md  load.py  pyproject.toml
shutup/: main.py
