[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shutup-overlay"
version = "0.1.0"
description = "Hotkey-triggered overlay messages submitted to Hack Club Flavortown."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["keyboard"]

[project.scripts]
shutup = "shutup.main:main"